--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@genkit-ai/googleai": "1.0.0-rc.3",
@@ -31,7 +32,6 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
-    "jotai": "^2.9.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "1.0.0-rc.3",
+    "jotai": "^2.9.1",
     "lucide-react": "^0.475.0",
     "next": "^14.2.3",
     "patch-package": "^8.0.0",
@@ -65,5 +66,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "genkit": "1.0.0-rc.3",
+    "@genkit-ai/googleai": "1.0.0-rc.3",
+    "@genkit-ai/next": "1.0.0-rc.3"
   }
 }
