--- a/package.json
+++ b/package.json
@@ -4,17 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "1.0.0-rc.3",
-    "@genkit-ai/next": "1.0.0-rc.3",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -43,10 +38,10 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "1.0.0-rc.3",
     "jotai": "^2.9.1",
     "lucide-react": "^0.475.0",
     "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -62,14 +57,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "1.0.0-rc.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "overrides": {
-    "genkit": "1.0.0-rc.3",
     "@genkit-ai/googleai": "1.0.0-rc.3",
-    "@genkit-ai/next": "1.0.0-rc.3"
+    "genkit": "1.0.0-rc.3"
   }
 }
